# bth_tha_aie

./: .gitignore  README.md  pr.md  requirements.txt
architecture/: architecture_diagram.drawio
backend/: index_setup.py  latest_error.md  main.py  pyproject.toml  test_graph.py
backend/src/: agent_graph.py  agents.py  settings.py  state.py
deliverables/: 0.architecture_workflow.md  1.architecture_overview.md  2.tech_stack.md  3.implementation_approach.md  4.1.monthly_cost_report.md  4.cost_estimate.md
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml
frontend/: app.py  mock_users.json
